# LINAL-Spaceship

./: .gitignore  CMakeLists.txt  README.MD
include/: Application.h
include/game/: Bullet.h  Camera.h  Game.h  GameObjectCreation.h  LoopControl.h  ShootingTarget.h  Spaceship.h  Updatable.h  WireModel.h
include/math/: Matrix.h  Mesh.h  Transform.h  Vector3.h  Vector4.h
main/: CMakeLists.txt
main/include/: Application.h
main/include/game/: Bullet.h  Camera.h  Game.h  GameObjectCreation.h  NullDrawable.h  Time.h  Updatable.h  WireModel.h
main/include/math/: Matrix.h  Mesh.h  Transform.h
main/source/: Application.cpp
main/source/game/: Bullet.cpp  Camera.cpp  Game.cpp  GameObjectCreation.cpp  ShootingTarget.cpp  Spaceship.cpp  WireModel.cpp
main/source/math/: Matrix.cpp  Transform.cpp
source/: Application.cpp
source/game/: Bullet.cpp  Game.cpp  GameObjectCreation.cpp  ShootingTarget.cpp  Spaceship.cpp  WireModel.cpp
source/math/: Mesh.cpp  Transform.cpp  Vector3.cpp  Vector4.cpp
test/: CMakeLists.txt
test/include/: Catch.hpp
test/source/: Main.cpp  Tests.cpp
